--- a/index.html
+++ b/index.html
@@ -20,13 +20,38 @@
       //       //   const date = new Date(1000 * parseInt(card.id.substring(0, 8), 16));
       //       //   const created = `${date.getMonth() + 1}/${date.getDate()}/${date.getFullYear()}`;
       //       //   const now = `${new Date().getMonth() + 1}/${new Date().getDate()}/${new Date().getFullYear()}`;
-      //       //   const days = datediff(parseDate(created), parseDate(now));
+      //       //   const days = dateDiff(parseDate(created), parseDate(now));
 
       //       //   alert(time);
       //       // })
       //     }
       //   }]
       // },
+      'list-sorters': function (t) {
+        return t.list('name', 'id')
+          .then(function (list) {
+            return [{
+              text: "Labels",
+              callback: function (t, opts) {
+                // Trello will call this if the user clicks on this sort
+                // opts.cards contains all card objects in the list
+                var sortedCards = opts.cards.sort(
+                  function (a, b) {
+                    if (a.name > b.name) {
+                      return 1;
+                    } else if (b.name > a.name) {
+                      return -1;
+                    }
+                    return 0;
+                  });
+
+                return {
+                  sortedIds: sortedCards.map(function (c) { return c.id; })
+                };
+              }
+            }];
+          });
+      },
       "card-badges": function (t, options) {
         return t
           .card("all")
@@ -38,7 +63,7 @@
                 const date = new Date(1000 * parseInt(card.id.substring(0, 8), 16));
                 const created = `${date.getMonth() + 1}/${date.getDate()}/${date.getFullYear()}`;
                 const now = `${new Date().getMonth() + 1}/${new Date().getDate()}/${new Date().getFullYear()}`;
-                const days = datediff(parseDate(created), parseDate(now));
+                const days = dateDiff(parseDate(created), parseDate(now));
 
                 if (days > 3) return {};
                 else return {
@@ -52,7 +77,7 @@
       }
     });
 
-    function datediff(first, second) {
+    function dateDiff(first, second) {
       return Math.round((second - first) / (1000 * 60 * 60 * 24));
     }
 
