--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
                 // opts.cards contains all card objects in the list
                 var sortedCards = opts.cards.sort(
                   function (a, b) {
-                    if (a.name > b.name) {
+                    if (a.labels.length > 0 && b.labels.length === 0) {
                       return 1;
-                    } else if (b.name > a.name) {
+                    } else if (b.labels.length > 0 && a.labels.length === 0) {
                       return -1;
                     }
+
                     return 0;
                   });
 
