--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
                       return 1;
                     } else if (b.labels.length > 0 && a.labels.length === 0) {
                       return -1;
+                    } else {
+                      if (a.labels.some(label => label.name === "In Progress") && !b.labels.some(label => label.name === "In Progress"))
+                        return 1;
+                      else if (a.labels.some(label => label.name === "In Progress") && !b.labels.some(label => label.name === "In Progress")) {
+                        return -1;
+                      }
+                      return 0;
                     }
 
                     return 0;
