--- a/index.html
+++ b/index.html
@@ -37,16 +37,18 @@
                 // opts.cards contains all card objects in the list
                 var sortedCards = opts.cards.sort(
                   function (a, b) {
+                    if (a.labels.some(label => label.name === "In Progress") && !b.labels.some(label => label.name === "In Progress")) {
+                      return -1;
+                    } else if (a.labels.some(label => label.name === "In Progress") && !b.labels.some(label => label.name === "In Progress")) {
+                      return -1;
+                    }
+
                     if (a.labels.length > 0 && b.labels.length === 0) {
                       return 1;
                     } else if (b.labels.length > 0 && a.labels.length === 0) {
                       return -1;
                     } else {
-                      if (a.labels.some(label => label.name === "In Progress") && !b.labels.some(label => label.name === "In Progress"))
-                        return -1;
-                      else if (a.labels.some(label => label.name === "In Progress") && !b.labels.some(label => label.name === "In Progress")) {
-                        return -1;
-                      }
+
                       return 0;
                     }
 
