--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                   function (a, b) {
                     if (a.labels.some(label => label.name === "In Progress") && !b.labels.some(label => label.name === "In Progress")) {
                       return -1;
-                    } else if (a.labels.some(label => label.name === "In Progress") && !b.labels.some(label => label.name === "In Progress")) {
-                      return -1;
+                    } else if (b.labels.some(label => label.name === "In Progress") && !a.labels.some(label => label.name === "In Progress")) {
+                      return 1;
                     }
 
                     if (a.labels.length > 0 && b.labels.length === 0) {
