--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
                       return -1;
                     } else if (b.labels.some(label => label.name === "In Progress") && !a.labels.some(label => label.name === "In Progress")) {
                       return 1;
+                    } else if (a.labels.some(label => label.name === "In Progress") && b.labels.some(label => label.name === "In Progress")) {
+                      // both contain In Progress
+                      if (a.labels.some(label => label.name === "Needs More Info" || label.name === "Needs Approval") && !b.labels.some(label => label.name === "Needs More Info" || label.name === "Needs Approval")) {
+                        return -1;
+                      } else if (b.labels.some(label => label.name === "Needs More Info" || label.name === "Needs Approval") && !a.labels.some(label => label.name === "Needs More Info" || label.name === "Needs Approval"))  {
+                        return 1;
+                      } else {
+                        
+                      }
+                    } else {
+
                     }
 
                     if (a.labels.length > 0 && b.labels.length === 0) {
