--- a/index.html
+++ b/index.html
@@ -43,21 +43,26 @@
                       return 1;
                     }
 
-
                     if (a.labels.some(label => label.name === "In Progress") && !b.labels.some(label => label.name === "In Progress")) {
                       return -1;
                     } else if (b.labels.some(label => label.name === "In Progress") && !a.labels.some(label => label.name === "In Progress")) {
                       return 1;
                     } else if (a.labels.some(label => label.name === "In Progress") && b.labels.some(label => label.name === "In Progress")) {
                       // both contain In Progress
-                    } else {
+                    }
 
+                    if (a.labels.some(label => label.name === "Completed") && !b.labels.some(label => label.name === "Completed")) {
+                      return 1;
+                    } else if (b.labels.some(label => label.name === "Completed") && !a.labels.some(label => label.name === "Completed")) {
+                      return -1;
+                    } else if (a.labels.some(label => label.name === "Completed") && b.labels.some(label => label.name === "Completed")) {
+                      // both contain Completed
                     }
 
                     if (a.labels.length > 0 && b.labels.length === 0) {
-                      return 1;
-                    } else if (b.labels.length > 0 && a.labels.length === 0) {
                       return -1;
+                    } else if (b.labels.length > 0 && a.labels.length === 0) {
+                      return 1;
                     } else {
 
                       return 0;
