--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                         return -1;
                       } else if (b.labels.some(label => label.name === "Needs Testing") && !a.labels.some(label => label.name === "Needs Testing")) {
                         return 1;
+                      } else if (a.labels.some(label => label.name === "Needs Improvement") && !b.labels.some(label => label.name === "Needs Improvement")) {
+                        return -1;
+                      } else if (b.labels.some(label => label.name === "Needs Improvement") && !a.labels.some(label => label.name === "Needs Improvement")) {
+                        return 1;
                       }
                     }
 
