sort by planned

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                       // both contain In Progress
                     }
 
+                    if (a.labels.some(label => label.name === "Planned") && !b.labels.some(label => label.name === "Planned")) {
+                      return 1;
+                    } else if (b.labels.some(label => label.name === "Planned") && !a.labels.some(label => label.name === "Planned")) {
+                      return -1;
+                    }
+
                     if (a.labels.some(label => label.name === "Completed") && !b.labels.some(label => label.name === "Completed")) {
                       return 1;
                     } else if (b.labels.some(label => label.name === "Completed") && !a.labels.some(label => label.name === "Completed")) {
